Fix bugs, refactorize, added matching endpoint to recipeController